<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="50dp"
            android:paddingBottom="100dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="70sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="40dp"
            android:paddingBottom="20dp"
            android:text="Login"
            android:textAlignment="textStart"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/User"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/Error"
            android:textAlignment="center"
            android:textColor="#830909"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:text="Start"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>