<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleX="1"
    android:scaleY="1"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#00000000"
        android:padding="-0dp"
        android:scaleType="centerInside"
        android:src="@drawable/homeimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/homeimage" />

    <TextView
        android:id="@+id/lblSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingTop="50dp"
        android:text="@string/lblSettings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/test3000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSettings"
        app:layout_constraintVertical_bias="0.0">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TableRow
                android:layout_width="367dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/General"
                    android:textSize="26sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/lblSounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="Sounds"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ToggleButton
                    android:id="@+id/btnSounds"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:checked="true"
                    android:fontFamily="sans-serif-smallcaps" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/lblDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/dark_mode"
                    android:textSize="24sp" />

                <Switch
                    android:id="@+id/switchDarkMode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:translationX="-30dp"
                    android:visibility="visible"
                    tools:checked="false"
                    tools:visibility="visible" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingTop="10px">


                <TextView
                    android:id="@+id/lblLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/lblLevel"
                    android:textSize="24sp" />

                <Switch
                    android:id="@+id/switchEasyHard"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_weight="1"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:translationX="-30dp"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:layout_width="367dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:paddingTop="10px"
                android:paddingBottom="20px">


                <TextView
                    android:id="@+id/lblUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Username"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/eTUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnChangeUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="@string/Change"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lbllanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Language"
                    android:textSize="26sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingLeft="10dp"
                android:text="English"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbGerman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingLeft="10dp"
                android:text="Deutsch"
                android:textSize="24sp" />
        </RadioGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>